fix tooltip box in dark mode

--- a/morebits.css
+++ b/morebits.css
@@ -327,6 +327,13 @@ body .ui-dialog.morebits-dialog .morebits-dialog-footerlinks a {
 	display: inline-block;
 }
 
+.morebits-ui-tooltip {
+	background: var(--background-color-neutral-subtle, #f8f9fa);
+	color: inherit;
+	border-color: var(--border-color-base, #a2ab91);
+	box-shadow: 0 0 5px #a2ab91;
+}
+
 /* For styling message/warning boxes. Cannot use MediaWiki ombox class because it will be deprecated soon. */
 table.morebits-ombox {
     margin: 4px 10%;
